--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "classnames": "2.2.6",
     "moment": "2.24.0",
     "node-sass": "4.12.0",
     "nouislider": "13.1.5",
     "react": "16.8.6",
+    "react-bootstrap": "^1.0.1",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.6",
+    "react-drag-drawer": "^3.3.4",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
@@ -44,8 +47,7 @@
   "optionalDependencies": {
     "typescript": "3.5.2"
   },
-
-  "engines" : { 
-    "node" : "12.x" 
+  "engines": {
+    "node": "12.x"
   }
 }
